--- a/dashboard.html
+++ b/dashboard.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Dashboard</title>
-    <script>
-        // Redirect to login if not authenticated
-        if (localStorage.getItem("isLoggedIn") !== "true") {
-            window.location.href = "login.html";
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard | Health Clinic</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome, Admin!</h1>
-    <button onclick="logout()">Logout</button>
-    
-    <script>
-        function logout() {
-            localStorage.removeItem("isLoggedIn");
-            window.location.href = "login.html";
-        }
-    </script>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand" href="#">Health Clinic</a>
+      <button class="btn btn-light ms-auto" onclick="logout()">Logout</button>
+    </div>
+  </nav>
+
+  <div class="container mt-5">
+    <h2>Admin Dashboard</h2>
+    <div class="card mt-4">
+      <div class="card-body">
+        <h5 class="card-title">Quick Actions</h5>
+        <a href="appointment.html" class="btn btn-primary me-2">Manage Appointments</a>
+        <a href="scan.html" class="btn btn-success">Access Barcode Scanner</a>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/auth.js"></script>
+  <script>
+    function logout() {
+      localStorage.removeItem("isLoggedIn");
+      window.location.href = "login.html";
+    }
+  </script>
 </body>
 </html>
