--- a/index.html
+++ b/index.html
@@ -4,45 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Health Clinic</title>
-  <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="bg-primary text-white p-4">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <h1>Welcome to Our Health Clinic</h1>
-      <p>Quality care for everyone</p>
+      <a class="navbar-brand" href="#">Health Clinic</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Admin Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="appointment.html">Book Appointment</a></li>
+          <li class="nav-item"><a class="nav-link" href="scan.html">Barcode Scan</a></li>
+        </ul>
+      </div>
     </div>
-  </header>
+  </nav>
 
-  <main class="container my-5">
-    <section class="row">
-      <div class="col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Book an Appointment</h2>
-            <p class="card-text">Schedule your visit with our specialists.</p>
-            <a href="appointment.html" class="btn btn-primary">Book Now</a>
-          </div>
-        </div>
-      </div>
+  <div class="container mt-5 text-center">
+    <h1>Welcome to Our Health Clinic</h1>
+    <p class="lead">Manage appointments and patient records efficiently.</p>
+    <img src="https://via.placeholder.com/800x400?text=Clinic+Image" class="img-fluid my-4">
+  </div>
 
-      <div class="col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Barcode Scanner</h2>
-            <p class="card-text">Scan your patient ID or medication barcode.</p>
-            <a href="scan.html" class="btn btn-primary">Scan Now</a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="bg-dark text-white p-4 text-center">
-    <p>© 2023 Health Clinic. All rights reserved.</p>
-  </footer>
-
+  <script src="js/auth.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
