--- a/login.html
+++ b/login.html
@@ -1,52 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Health Clinic</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="bg-light">
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4">
-        <div class="card shadow">
-          <div class="card-body">
-            <h2 class="text-center mb-4">Admin Login</h2>
-            <form id="loginForm">
-              <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" required>
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" required>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Login</button>
-            </form>
-            <div id="loginStatus" class="mt-3 alert d-none"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- Simplified login form -->
+<form id="loginForm">
+  <select id="role" class="form-select mb-3">
+    <option value="admin">Admin</option>
+    <option value="doctor">Doctor</option>
+    <option value="nurse">Nurse</option>
+  </select>
+  <input type="text" id="username" class="form-control mb-3" placeholder="Username" required>
+  <input type="password" id="password" class="form-control mb-3" placeholder="Password" required>
+  <button type="submit" class="btn btn-primary w-100">Login</button>
+</form>
 
-  <script src="js/auth.js"></script>
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", (e) => {
-      e.preventDefault();
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-      
-      if (username === "root" && password === "root") {
-        localStorage.setItem("isLoggedIn", "true");
-        window.location.href = "dashboard.html";
-      } else {
-        document.getElementById("loginStatus").textContent = "Invalid credentials";
-        document.getElementById("loginStatus").classList.remove("d-none");
-      }
-    });
-  </script>
-</body>
-</html>
+<script src="js/auth.js"></script>
