--- a/login.html
+++ b/login.html
@@ -1,13 +1,19 @@
-<!-- Simplified login form -->
-<form id="loginForm">
-  <select id="role" class="form-select mb-3">
-    <option value="admin">Admin</option>
-    <option value="doctor">Doctor</option>
-    <option value="nurse">Nurse</option>
-  </select>
-  <input type="text" id="username" class="form-control mb-3" placeholder="Username" required>
-  <input type="password" id="password" class="form-control mb-3" placeholder="Password" required>
-  <button type="submit" class="btn btn-primary w-100">Login</button>
-</form>
+document.getElementById("loginForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  const role = document.getElementById("role").value;
+  const username = document.getElementById("username").value;
+  const password = document.getElementById("password").value;
 
-<script src="js/auth.js"></script>
+  const user = users.find(u => 
+    u.role === role && 
+    u.username === username && 
+    u.password === password
+  );
+
+  if (user) {
+    localStorage.setItem("currentUser", JSON.stringify(user));
+    window.location.href = `dashboard/${role}.html`; // Case-sensitive!
+  } else {
+    alert("Invalid credentials or role mismatch!");
+  }
+});
