--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Health Clinic</a>
+      <a class="navbar-brand" href="#">One Health Clinic</a>
       <button class="btn btn-light ms-auto" onclick="logout()">Logout</button>
     </div>
   </nav>
