--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="display-4 fw-bold mb-3">Welcome to Our Health Clinic</h1>
+            <h1 class="display-4 fw-bold mb-3">Welcome to One Health Clinic</h1>
             <p class="lead mb-4">Manage appointments and patient records efficiently.</p>
             <div class="d-flex justify-content-center gap-3">
                 <a href="appointment.html" class="btn btn-light btn-lg">Book Appointment</a>
