--- a/index.html
+++ b/index.html
@@ -1,130 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health Clinic</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-        }
-        .hero-section {
-            background: linear-gradient(rgba(0, 123, 255, 0.8), rgba(0, 86, 179, 0.8)), url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            padding: 100px 0;
-            text-align: center;
-        }
-        .navbar {
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        .feature-icon {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: #007bff;
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 30px 0;
-            margin-top: 50px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>One Health Clinic</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background-color: #e0f2f1;
+      color: #004d40;
+    }
+
+    header {
+      background-color: #004d40;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    main {
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      margin-top: 0;
+      font-size: 1.1rem;
+    }
+
+    .btn-group {
+      display: grid;
+      gap: 1rem;
+      margin-top: 2rem;
+      width: 100%;
+      max-width: 400px;
+    }
+
+    a.button {
+      display: block;
+      padding: 1rem;
+      background-color: #00796b;
+      color: white;
+      text-align: center;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+
+    a.button:hover {
+      background-color: #004d40;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      background-color: #004d40;
+      color: white;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    @media (max-width: 600px) {
+      header, main {
+        padding: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="#">
-                <span class="text-primary">Health</span> Clinic
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Doctors</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-                    <li class="nav-item"><a class="btn btn-primary ms-2" href="appointment.html">Book Appointment</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="container">
-            <h1 class="display-4 fw-bold mb-3">Welcome to One Health Clinic</h1>
-            <p class="lead mb-4">Manage appointments and patient records efficiently.</p>
-            <div class="d-flex justify-content-center gap-3">
-                <a href="appointment.html" class="btn btn-light btn-lg">Book Appointment</a>
-                <a href="login.html" class="btn btn-outline-light btn-lg">Admin Login</a>
-            </div>
-        </div>
-    </section>
+  <header>
+    <h1>One Health Clinic</h1>
+    <p>Where care meets convenience</p>
+  </header>
 
-    <!-- Features Section -->
-    <section class="py-5">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md-4 mb-4">
-                    <div class="feature-icon">
-                        <i class="bi bi-calendar-check"></i>
-                    </div>
-                    <h3>Easy Scheduling</h3>
-                    <p>Book appointments online 24/7 with our simple system.</p>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="feature-icon">
-                        <i class="bi bi-upc-scan"></i>
-                    </div>
-                    <h3>Barcode System</h3>
-                    <p>Efficient patient check-in using our scanning technology.</p>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="feature-icon">
-                        <i class="bi bi-shield-lock"></i>
-                    </div>
-                    <h3>Secure Records</h3>
-                    <p>Your health information is protected and confidential.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+  <main>
+    <h2>Welcome to Our Online Portal</h2>
+    <p>Please select an option below:</p>
 
-    <!-- Footer -->
-    <footer class="text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-3">
-                    <h5>Health Clinic</h5>
-                    <p>Providing quality healthcare services since 2010.</p>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Home</a></li>
-                        <li><a href="#" class="text-white">Services</a></li>
-                        <li><a href="login.html" class="text-white">Admin</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <h5>Contact</h5>
-                    <p>123 Clinic St, Health City<br>Phone: (123) 456-7890</p>
-                </div>
-            </div>
-            <hr class="bg-light">
-            <p class="mb-0">&copy; 2023 Health Clinic. All rights reserved.</p>
-        </div>
-    </footer>
+    <div class="btn-group">
+      <a href="book.html" class="button">📅 Book Appointment</a>
+      <a href="history.html" class="button">📖 View Appointment History</a>
+      <a href="reschedule.html" class="button">🔄 Reschedule Appointment</a>
+      <a href="feedback.html" class="button">💬 Give Feedback</a>
+      <a href="admin.html" class="button">🔐 Admin Login</a>
+    </div>
+  </main>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"></script>
+  <footer>
+    &copy; 2025 One Health Clinic. All rights reserved.
+  </footer>
+
 </body>
 </html>
